<?xml version="1.0" encoding="utf-8"?>

<!--  Copyright (c) MediaArea.net SARL. All Rights Reserved.

      Use of this source code is governed by a BSD-style license that can
      be found in the License.html file in the root of the source tree.
-->

<resources>
  <string name="app_name" translatable="false">MediaInfo</string>
  <string name="app_version" translatable="false">26.10</string>
  <string name="hello_text" csv="At least one file">(You must at least open one file)</string>
  <string name="about_title" csv="About">About</string>
  <string name="about_about_text" formatted="false" csv="MediaInfo_About_About">MediaInfo v%MI_VERSION% using MediaInfoLib v%MIL_VERSION%</string>
  <string name="about_copyright_text" translatable="false">Copyright © 2002-2025 MediaArea.net SARL.</string>
  <string name="about_description_text" csv="MediaInfo_About">
            MediaInfo provides easy access to technical and tag information about video and audio files.\n
            Except the Mac App Store graphical user interface, it is open-source software, which means that it is free of charge to the end user and developers have freedom to study, to improve and to redistribute the program (BSD license)
  </string>
  <string name="website_text" csv="WebSite">WebSite</string>
  <string name="email_text" csv="EMail">E-Mail</string>
  <string name="error_write_text" csv="Error_File_Write">Error while writing file</string>
  <string name="menu_export" csv="Export">Export</string>
  <string name="menu_views" csv="View">View</string>
  <string name="uimode_title" csv="DarkMode">Dark mode</string>
  <string name="preferences_locale_title" csv="Language">Language</string>
  <string name="report_translate_title" csv="Translate_Reports">Translate reports</string>
  <string name="settings_title" csv="Options_Hint">Preferences</string>
  <string name="premium_title" csv="Premium">Premium</string>
  <string name="premium_summary" csv="Premium_Summary">Exclusive features for premium subscribers</string>
  <string name="subscribe_title" csv="Subscribe">Subscribe</string>
  <string name="subscribe_text" csv="Subscribe">Subscribe</string>
  <string name="subscribe_button_text" csv="Subscribe_Button" formatted="false">Subscribe for %PRICE% per year</string>
  <string name="lifetime_subscribe_button_text" csv="Lifetime_Subscribe_Button" formatted="false">Lifetime subscription for %PRICE%</string>
  <string name="subscribed_text" csv="Subscribe_Manage">Manage subscription</string>
  <string name="thanks_text" csv="Subscription_Thanks">Subscription detected. Thanks for your support!</string>
  <string name="subscription_detail_text" csv="Subscription_Android">Free 3 days trial period.</string>
  <string name="subscription_condition_text" formatted="false">
    3-Day Free Trial Subscription:\n\n
        During this trial period, you\'ll have unlimited access to all the premium features.\n\n
        Please be reminded that we currently don\'t provide many premium features, we provide a premium offer here for giving you an easy way to show your support to our open source project.\n\n
    Subscription Terms:\n\n
        Duration: Your 3-day trial subscription begins as soon as you sign up for the annual subscription for the first time.\n\n
        Cost: The price for the subscription is %PRICE%. This amount will be charged to your Google Play account upon the end of the trial period annually unless canceled before the end of the trial period.
        Conversion: At the end of the trial period, your subscription will automatically convert to a paid subscription unless canceled before the trial ends.\n\n
        Cancellation: You can cancel your subscription at any time during the trial period to avoid being charged. To cancel, simply go to your Google Play Store account settings.\n\n
  </string>
  <string name="store_text" csv="SupportUs">Support us. Get the dark theme and more features to come.</string>
  <string name="clear_text" csv="ClearList">Clear list</string>
  <string name="text_output_desc" csv="Text">Text</string>
  <string name="logo_desc">MediaArea logo</string>
  <string name="delete_desc" csv="Delete">Delete</string>
  <string name="default_setting_text" csv="Default_Setting">System default</string>
  <string name="export_title" csv="Export">Export</string>
  <string name="open_title" csv="Open">Open</string>
  <string name="save_title" csv="Save">Save</string>
  <string name="media_error_text" csv="External_Media_NotMounted">External media is not accessible</string>
  <string name="website_url" translatable="false">https://mediaarea.net/MediaInfo</string>
  <string name="email_url" translatable="false">mailto:info@mediaarea.net?subject=MediaInfo Android:</string>
  <string name="subscription_manage_url" translatable="false">https://play.google.com/store/account/subscriptions?sku=net.mediaarea.mediainfo.inapp1|package=net.mediaarea.mediainfo</string>
  <string name="subscription_sku" translatable="false">net.mediaarea.mediainfo.inapp1</string>
  <string name="lifetime_subscription_sku" translatable="false">net.mediaarea.mediainfo.inapp2</string>
  <string name="preferences_key" translatable="false">net.mediaarea.mediainfo.preferences</string>
  <string name="preferences_view_key" translatable="false">net.mediaarea.mediainfo.preferences_view</string>
  <string name="preferences_uimode_key" translatable="false">net.mediaarea.mediainfo.preferences_uimode</string>
  <string name="preferences_locale_key" translatable="false">net.mediaarea.mediainfo.preferences_locale</string>
  <string name="preferences_subscribe_key" translatable="false">net.mediaarea.mediainfo.preferences_subscribe</string>
  <string name="preferences_report_translate_key" translatable="false">net.mediaarea.mediainfo.preferences_report_translate</string>
  <string name="preferences_permissions_key" translatable="false">net.mediaarea.mediainfo.preferences_permissions</string>
  <string name="permissions_geolocation_title" csv="Geolocation_Permission_Title">Geolocation data access</string>
  <string name="permissions_geolocation_summary" csv="Geolocation_Permission_Summary">Photos and Videos permission is needed to read geolocation metadata from media files</string>
  <string name="permissions_geolocation_help" csv="Geolocation_Permission_Help">To enable geolocation metadata reading, follow these steps on the next screen:\n\n1. Open Permissions\n2. Select Photos and Videos\n3. Choose Allow.</string>
</resources>
