<?xml version="1.0" encoding="utf-8"?>

<!--  Copyright (c) MediaArea.net SARL. All Rights Reserved.

      Use of this source code is governed by a BSD-style license that can
      be found in the License.html file in the root of the source tree.
-->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:checkable="true"
        android:id="@+id/action_nightmode"
        android:title="@string/uimode_title"
        android:visible="false" />

    <item
        android:id="@+id/action_subscribe"
        android:title="@string/subscribe_text" />

    <!--<item android:checkable="true"
        android:id="@+id/action_nightmode_auto"
        android:title="@string/uimode_auto_title" />-->

    <item
        android:id="@+id/action_about"
        android:title="@string/about_title" />

</menu>